<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tracking Mobile</string>
    <string name="action_Circle">Circle Options</string>
    <string name="action_Account">Account</string>
    <string name="action_logout">Logout</string>
    <string name="action_emergency">Emergency</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="app_title">FIND MY PHONE</string>
    <string name="btn_enter_email">Enter Email</string>
    <string name="btn_enter_p">Enter Phone</string>
    <string name="appDes1">Locate the phones owned by anyone in</string>
    <string name="appDes2">your family anytime, anywhere</string>
    <string name="appDes3">Enter your phone/email</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="btn_go">GO</string>
    <string name="title_activity_funtion_main">FuntionMain</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_circle_option">CircleOptionActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_account_setting">AccountSettingActivity</string>

</resources>
